<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/img_movie_photo"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:contentDescription="@string/movie_image"
            tools:src="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_movie_photo"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/movie_name" />

            <TextView
                android:id="@+id/tv_movie_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                tools:text="@string/movie_desc" />

        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>